tests/error/static_if_last_thing_in_the_file.c
// fail "'#if' without matching '#endif'."
#if 1
